# Modular-lekiwi-robot

./: README.md  wget-log
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
src/LeKiwi-sim-main/: .SLDASM  AnyConv.com__94868A713_NO-THREADS_Female-Threaded-Hex-Standoff.step  AnyConv.com__drive_motor_mount-v4.step  Dokingmount.SLDPRT  MUJOCO_LOG.TXT  Mg995raw.SLDPRT  README.md  mjcf_lcmm_robot.xml  so_arm100.xml
src/experiment2/: analyze_log.py  benchmark_log.py  experiment2.sh  experiment22.sh  experiment2_result.py  experiment4.py  log_tracker.py  record_reference_path.py  reference_path.csv  reference_path_test.csv  visualize_reference_path.py
src/imu_data/: data_analysis.py  data_collect.py  data_collect2.py  gyro_log_1755690624.csv  imu_data.code-workspace  imu_log_1755687369.csv  imu_log_1755688004.csv  imu_log_1755688541.csv  imu_log_1755688761.csv  imu_log_1755688790.csv  imu_log_1755688941.csv  imu_log_1755690482.csv  imu_log_1755690658.csv  imu_log_1755690905.csv  imu_log_1755749091.csv  imu_log_1757393082.csv  imu_test.py
src/lekiwi_controller/: package.xml  setup.cfg  setup.py
src/lekiwi_description/: 3DPrinting.md  Assembly.md  BOM.md  CMakeLists.txt  README.md
src/lekiwi_servo_control/: CMakeLists.txt
src/lekiwi_servo_control/src/: lekiwi_servo_control.cpp
src/omni_teleop/: setup.cfg  setup.py
src/scripts/: cal_time.py  experiment2_tab.py  experiment3_boxplot.py  experiment3_boxplot2.py  experiment3_boxplot3.py  experiment3_boxplotmerge.py  experiment3_plot.py  experiment3_plot2.py  experiment3_tab.py  (+2 more)
(+208 files in other folders)
